--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {}
 http {
     server {
         listen 80;
-        location /app {
+        location / {
             proxy_pass http://app-frontend:5000;
         }
     }
