--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,6 @@ networks:
 services:
 
   nginx:
-    networks: appnetwork
     container_name: nginx
     build: ./nginx
     image: nginx:latest
@@ -21,9 +20,10 @@ services:
     - type: bind
       source: ./nginx/nginx.conf
       target: /etc/nginx/nginx.conf
+    networks: 
+       - appnetwork
   
   frontend:
-    networks: appnetwork
     container_name: frontend
     build: ./frontend
     image: frontend-service:latest
@@ -32,10 +32,11 @@ services:
       published: 5000
     depends_on:
       - backend
+    networks:
+       - appnetwork
   
   
   backend:
-    networks: appnetwork
     container_name: backend
     build: ./backend
     image: backend-service:latest
@@ -46,9 +47,10 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
     depends_on:
       - database
+    networks:
+       - appnetwork
   
   database:
-    networks: appnetwork
     container_name: database
     image: mysql:latest
     environment:
@@ -56,3 +58,5 @@ services:
     ports:
     - target: 3306
       published: 3306
+    networks:
+       - appnetwork
