--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.7
 
 # Create and set the work directory inside the image named 'app'
-WORKDIR /app
+WORKDIR /application
 
 # Copy 'requirements.txt' file
 COPY requirements.txt .
