--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.7
 WORKDIR /application
 
 # Copy 'requirements.txt' file
-COPY requirements.txt .
+COPY . .
 
 # Install application dependencies using 'requirements.txt'
 RUN pip3 install -r requirements.txt
