--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,10 @@
 FROM python:3.7
 
 # Create and set the work directory inside the image named 'app'
-WORKDIR /app
+WORKDIR /application
 
 # Copy 'requirements.txt' file
-COPY requirements.txt .
+COPY . .
 
 # Install application dependencies using 'requirements.txt'
 RUN pip3 install -r requirements.txt
