--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,9 +36,14 @@ services:
     container_name: database
     image: mysql:latest
     environment:
-       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+#       - MYSQL_PASSWORD: password
+#       -  MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+         - MYSQL_ALLOW_EMPTY_PASSWORD=1
+ 
     ports:
     - target: 3306
       published: 3306
     networks:
        - appnetwork
+    volumes:
+       - /database:/var/lib/mysql
