--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,11 +2,15 @@ events {}
 http {
     server {
         listen 80;
-        location / {
+	root /application;
+	index index.html;
+        location /task/ {
             proxy_pass http://frontend:5000;
         }
-	    location /backend {
+	location /backend {
 	    proxy_pass http://backend:5001;
         }
     }
 } 
+
+
