--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,9 @@ http {
 	index index.html;
         location /task/ {
             proxy_pass http://frontend:5000;
-            try_files $uri ./frontend/application/templates/index.html;
+            root ./frontend/application/templates
+            index index.html
+            try_files $uri index.html;
         }
 	location /backend {
 	    proxy_pass http://backend:5001;
