edited docker-compose and nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,8 @@ events {}
 http {
     server {
         listen 80;
-	root /application;
-	index index.html;
-        location /task/ {
+        location / {
             proxy_pass http://frontend:5000;
-            root ./frontend/application/templates
-            index index.html
             try_files $uri index.html;
         }
 	location /backend {
