--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,9 @@ events {}
 http {
     server {
         listen 80;
-        location / {
-            proxy_pass http://frontend:5000;
+        root ~/Projects/SFIA_2/frontend/application/templates/index.html/;
+       # location / {
+           # proxy_pass http://frontend:5000;
            # try_files $uri index.html;
         }
 	location /backend {
