--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,8 +7,8 @@ http {
            # proxy_pass http://frontend:5000;
            # try_files $uri index.html;
         }
-	location /backend {
-	    proxy_pass http://backend:5001;
+	#location /backend {
+	   # proxy_pass http://backend:5001;
         }
     }
 } 
