--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,11 +2,10 @@ events {}
 http {
     server {
         listen 80;
-        root ~/Projects/SFIA_2/frontend/application/templates/index.html/;
-       # location / {
-           # proxy_pass http://frontend:5000;
-           # try_files $uri index.html;
-       # }
+        location / {
+            proxy_pass http://frontend:5000;
+            try_files $uri index.html;
+        }
 	#location /backend {
 	   # proxy_pass http://backend:5001;
        # }
