--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,4 +46,5 @@ services:
     - type: bind
       source: ./nginx/nginx.conf
       target: /etc/nginx/nginx.conf
-    depends_on: frontend
+    depends_on:
+      - frontend
