added steps to install docker and docker-compose

--- a/Ansible/playbook.yml
+++ b/Ansible/playbook.yml
@@ -5,3 +5,9 @@
   tasks:
   - name: 'install Jenkins'
     script: installjenkins.sh
+
+  - name: 'install docker'
+    script: installdocker.sh
+
+  - name: 'install docker-compose'
+    script: installdockercompose.sh
